@startuml

title __SRC's Class Diagram__\n

  namespace Circle {
    class Circle {
        - radius : double
        + getArea()
        + getPerimeter()
        + setRadius()
    }
  }
  

  namespace Ellipse {
    class Ellipse {
        - semiMajorAxis : double
        - semiMinorAxis : double
        + getArea()
        + getPerimeter()
        + setSemiMajorAxis()
        + setSemiMinorAxis()
    }
  }


  namespace FancyHelloWorld {
    class FancyHelloWorld {
        {static} + main()
        + run()
    }
  }


  namespace Rectangle {
    class Rectangle {
        - height : double
        - width : double
        + getArea()
        + getPerimeter()
        + setHeight()
        + setWidth()
    }
  }
  

  namespace Shape {
    abstract class Shape {
        {abstract} + getArea()
        {abstract} + getPerimeter()
    }
  }
  

  namespace ShapeCalculator {
    class ShapeCalculator {
        {static} - scanner : Scanner
        {static} + main()
        {static} - circleComputations()
        {static} - ellipseComputations()
        {static} - rectangleComputations()
        {static} - squareComputations()
        {static} - trapezoidComputations()
    }
  }
  

  namespace Square {
    class Square {
        - side : double
        + getArea()
        + getPerimeter()
        + setSide()
    }
  }
  

  namespace Trapezoid {
    class Trapezoid {
        - bottomBase : double
        - height : double
        - topBase : double
        + getArea()
        + getPerimeter()
        + setBottomBase()
        + setHeight()
        + setTopBase()
    }
  }


  namespace Parallelogram {
    class Parallelogram {
        - base : double
        - height : double
        - sideLength : double
        + getArea()
        + getPerimeter()
        + setBase()
        + setHeight()
        + setSideLength()
    }
  }
  

  Circle -up-|> Shape
  Ellipse -up-|> Shape
  Rectangle -up-|> Shape
  Square -up-|> Shape
  Trapezoid -up-|> Shape
  Parallelogram -up-|> Shape


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
